--- a/stats.html
+++ b/stats.html
@@ -103,7 +103,7 @@
                 stats = document.getElementById("stats");
                 stats.innerHTML = "Endings Found: " + endingsFound + "/" + totalEndings;
                 stats.innerHTML += "<br>Time Taken: " + formatSecondsToTimeString(timeTaken);
-                stats.innerHTML += "<br>Difficulty: " + difficulty;
+                stats.innerHTML += "<br>Difficulty: " + difficulty; //TODO: use difficulty name such as "tourist" instead of "easy"
 
 
                 
