--- a/mainGameScreen.html
+++ b/mainGameScreen.html
@@ -6,10 +6,10 @@
 
     <script type="text/javascript" src="storyData.js"></script>
 
-    <style>
-        .text {
-            color: black;
-        }
+        <style>
+            .text {
+                color: black;
+            }
 
         .unselectable {
             -webkit-touch-callout: none;
@@ -20,12 +20,12 @@
             user-select: none;
         }
 
-        body {
-            min-height: 100vh;
-            display: flex;
-            gap: 10px;
-            background: pink;
-            margin: 0;
+            body {
+                min-height: 100vh;
+                display: flex;
+                gap: 10px;
+                background: pink;
+                margin: 0;
 
             flex-direction: column;
             align-items: stretch;
@@ -43,12 +43,12 @@
             flex-grow: 1;
         }
 
-        #leftCol {
-            display: flex;
-            flex-direction: column;
-            flex: 6;
-            background-color: aquamarine;
-        }
+            #leftCol{
+                display: flex;
+                flex-direction: column;
+                flex: 6;
+                background-color: aquamarine;
+            }
 
         #rightCol {
             display: flex;
@@ -57,26 +57,25 @@
             background-color: aliceblue;
         }
 
-        #imageBox {
-            flex-grow: 1;
-            background-color: moccasin;
-        }
+            #imageBox {
+                flex-grow: 1;
+                background-color: moccasin;
+            }
+            #imageBox > img {
+                width: 100%;
+                object-fit: cover;
+            }
 
-        #imageBox>img {
-            width: 100%;
-            object-fit: cover;
-        }
+            #descriptionBox{
+                background-color: salmon;
+                flex-grow: 1;
+                overflow: scroll;
+            }
 
-        #descriptionBox {
-            background-color: salmon;
-            flex-grow: 1;
-            overflow: scroll;
-        }
-
-        #promptBox {
-            background-color: palegreen;
-            min-height: 200px;
-        }
+            #promptBox {
+                background-color:palegreen;
+                min-height: 200px; 
+            }
 
         #promptBox {
             display: flex;
@@ -156,35 +155,34 @@
             z-index: 9999;
         }
 
-        #accessibility-panel {
-            position: fixed;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 5px;
-            z-index: 1001;
-        }
-
-        #imageBox img {
-            height: 30em;
-            object-fit: contain;
-        }
-    </style>
-</head>
-
-<body>
-    <div id="topBanner">
-        <button onclick="showPopup()">NoteBook</button>
-        <div class="popup" id="popup">
-            <h2>Notebook</h2>
-            <textarea id="note-input" placeholder="Write your note here..."></textarea>
-            <button id="save-note-button">Save Note</button>
-            <ul id="notes-list"></ul>
-            <button onclick="hidePopup()">Close Popup</button>
-        </div>
-        <button id="open-accessibility-panel">Accessibility</button>
+            #accessibility-panel {
+                position: fixed;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+                background-color: #fff;
+                padding: 20px;
+                border-radius: 5px;
+                z-index: 1001;
+            }
+            
+            #imageBox img{
+                height: 30em;
+                object-fit:contain;
+            }
+        </style>
+    </head>
+    <body>
+        <div id="topBanner">
+            <button onclick="showPopup()">NoteBook</button>
+            <div class="popup" id="popup">
+                <h2>Notebook</h2>
+                <textarea id="note-input" placeholder="Write your note here..."></textarea>
+                <button id="save-note-button">Save Note</button>
+                <ul id="notes-list"></ul>
+                <button onclick="hidePopup()">Close Popup</button>
+            </div>
+            <button id="open-accessibility-panel">Accessibility</button>
 
         <div id="accessibility-panel" style="display: none;">
             <h2>Accessibility Options</h2>
@@ -215,22 +213,22 @@
 
         <div id="leftCol">
 
-            <div id="timerBox" class="test">
-                <h1>timerBox</h1>
-                <p id="timeLeft"></p>
+                <div id="timerBox" class="test">
+                    <h1>timerBox</h1>
+                    <p id="timeLeft"></p>
+                </div>
+    
+                <div id="imageBox" class="test">
+                    <h1>imageBox</h1>
+                    <img src="" alt="" id="sceneImage">
+                </div>
             </div>
 
-            <div id="imageBox" class="test">
-                <h1>imageBox</h1>
-                <img src="" alt="" id="sceneImage">
-            </div>
-        </div>
-
-        <div id="rightCol">
-            <div id="descriptionBox" class="test">
-                <h1>descriptionBox</h1>
-                <div id="sceneTextLocation"></div>
-            </div>
+            <div id="rightCol">
+                <div id="descriptionBox"  class="test">
+                    <h1>descriptionBox</h1>
+                    <div id="sceneTextLocation"></div>
+                </div>
 
             <div id="promptBox" class="test">
                 <h1>promptBox</h1>
@@ -264,7 +262,7 @@
                 sceneDict = storyLine[sceneID];
                 if (sceneDict === undefined) {
                     if (sceneID == "stats") {
-                        window.open('stats.html', '_self');
+                        window.open('stats.html','_self');
                     }
                     else {
                         alert("You've reached a dead-end in the story! Let us know how you found it.")
@@ -295,6 +293,9 @@
 
                 //set image
                 updateImage(sceneDict);
+
+                //set scene title
+                updateSceneTitle(sceneDict);
 
                 //set description
                 updateText(sceneDict);
@@ -331,6 +332,8 @@
                 scene_number += 1;
                 promptBox = document.getElementById("promptBox");
                 promptBox.innerHTML = null;
+                sceneText = document.getElementById("sceneTitle");
+                sceneText.innerHTML = null;
                 sceneText = document.getElementById("sceneTextLocation");
                 sceneText.innerHTML = null;
             }
@@ -339,6 +342,11 @@
                 //set image
                 imgPath = sceneDict.image;
                 document.getElementById("sceneImage").src = imgPath;
+            }
+
+            function updateSceneTitle(sceneDict) {
+                sceneTitle = sceneDict.title;
+                document.getElementById("sceneTitle").innerHTML = sceneTitle;
             }
 
             async function updateText(sceneDict) {
@@ -421,8 +429,8 @@
             function displayTime() {
                 var minutes = ~~(timeLeft / 60); // Bit-wise operators make it the whole quotient of the division
                 var seconds = timeLeft % 60;
-                if (seconds == 0) {
-                    seconds = "00" // Ensures consistent formatting
+                if (seconds < 10) {
+                    seconds = "0" + seconds; // Ensures consistent formatting
                 }
                 document.getElementById('timeLeft').innerHTML = minutes + ":" + seconds;
             }
