Styled music button

--- a/mainGameScreen.html
+++ b/mainGameScreen.html
@@ -257,6 +257,14 @@
                     <button onclick="hidePopup()">Close Popup</button>
                 </div>
                 <button id="open-accessibility-panel">&#127757 Accessibility</button>
+                <div class="popup" id="popup">
+                    <h2>Notebook</h2>
+                    <textarea id="note-input" placeholder="Write your note here..."></textarea>
+                    <button id="save-note-button">Save Note</button>
+                    <ul id="notes-list"></ul>
+                    <button onclick="hidePopup()">Close Popup</button>
+                </div>
+                <button id="open-accessibility-panel">&#127757 Accessibility</button>
 
                 <div id="accessibility-panel" style="display: none;">
                     <h2>Accessibility Options</h2>
@@ -274,10 +282,10 @@
                     </select>
                     <button id="close-accessibility-panel">Close</button>
                 </div>
+                <button id="startMusicButton">&#127925 Start Music</button>
+                <audio id="backgroundMusic" src="Chee Zee Jungle.mp3" preload="auto" loop></audio>
             </div>
             
-            <button id="startMusicButton">Start Music</button>
-            <audio id="backgroundMusic" src="Chee Zee Jungle.mp3" preload="auto" loop></audio>
         </div>
 
         <div id="gameWrapper" class="text">
