Styled music button

--- a/mainGameScreen.html
+++ b/mainGameScreen.html
@@ -249,35 +249,35 @@
             </div>
             <div id="topBannerRight">
                 <button onclick="showPopup()">&#128221 NoteBook</button>
-            <div class="popup" id="popup">
-                <h2>Notebook</h2>
-                <textarea id="note-input" placeholder="Write your note here..."></textarea>
-                <button id="save-note-button">Save Note</button>
-                <ul id="notes-list"></ul>
-                <button onclick="hidePopup()">Close Popup</button>
-            </div>
-            <button id="open-accessibility-panel">&#127757 Accessibility</button>
+                <div class="popup" id="popup">
+                    <h2>Notebook</h2>
+                    <textarea id="note-input" placeholder="Write your note here..."></textarea>
+                    <button id="save-note-button">Save Note</button>
+                    <ul id="notes-list"></ul>
+                    <button onclick="hidePopup()">Close Popup</button>
+                </div>
+                <button id="open-accessibility-panel">&#127757 Accessibility</button>
 
-            <div id="accessibility-panel" style="display: none;">
-                <h2>Accessibility Options</h2>
-                <label for="text-size">Text Size:</label>
-                <input type="range" id="text-size" min="14" max="24" value="16">
-                <label for="text-color">Text Color:</label>
-                <input type="color" id="text-color" value="#000000">
-                <label for="background-color">Background Color:</label>
-                <input type="color" id="background-color" value="#808080">
-                <label for="font-select">Font:</label>
-                <select id="font-select">
-                    <option value="Arial">Arial</option>
-                    <option value="Verdana">Verdana</option>
-                    <option value="OpenDyslexic">OpenDyslexic</option>
-                </select>
-                <button id="close-accessibility-panel">Close</button>
-            </div>
+                <div id="accessibility-panel" style="display: none;">
+                    <h2>Accessibility Options</h2>
+                    <label for="text-size">Text Size:</label>
+                    <input type="range" id="text-size" min="14" max="24" value="16">
+                    <label for="text-color">Text Color:</label>
+                    <input type="color" id="text-color" value="#000000">
+                    <label for="background-color">Background Color:</label>
+                    <input type="color" id="background-color" value="#808080">
+                    <label for="font-select">Font:</label>
+                    <select id="font-select">
+                        <option value="Arial">Arial</option>
+                        <option value="Verdana">Verdana</option>
+                        <option value="OpenDyslexic">OpenDyslexic</option>
+                    </select>
+                    <button id="close-accessibility-panel">Close</button>
+                </div>
+                <button id="startMusicButton">&#127925 Start Music</button>
+                <audio id="backgroundMusic" src="Chee Zee Jungle.mp3" preload="auto" loop></audio>
             </div>
             
-            <button id="startMusicButton">Start Music</button>
-            <audio id="backgroundMusic" src="Chee Zee Jungle.mp3" preload="auto" loop></audio>
         </div>
 
         <div id="gameWrapper" class="text">
