--- a/mainGameScreen.html
+++ b/mainGameScreen.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Jungle Escape!</title>
+        <title>Jungle Escape</title>
 
         <script type="text/javascript" src="storyData.js"></script>
 
