--- a/mainGameScreen.html
+++ b/mainGameScreen.html
@@ -261,14 +261,14 @@
                 <div id="accessibility-panel" style="display: none;">
                     <h2>Accessibility Options</h2>
                     <label for="text-size">Text Size:</label>
-                    <input type="range" id="text-size" min="14" max="24" value="16">
+                    <input type="range" id="text-size" min="14" max="24" value="18">
                     <label for="text-color">Text Color:</label>
-                    <input type="color" id="text-color" value="#000000">
+                    <input type="color" id="text" value="#000000">
                     <label for="background-color">Background Color:</label>
-                    <input type="color" id="background-color" value="#808080">
+                    <input type="color" id="background-color" value="#022c22">
                     <label for="font-select">Font:</label>
                     <select id="font-select">
-                        <option value="Arial">Arial</option>
+                        <option value="Arial">PathwayExtreme</option>
                         <option value="Verdana">Verdana</option>
                         <option value="OpenDyslexic">OpenDyslexic</option>
                     </select>
