change difficulty values

--- a/mainGameScreen.html
+++ b/mainGameScreen.html
@@ -474,15 +474,15 @@
                 difficulty = sessionStorage.getItem('difficulty');
 
                 switch(difficulty) {
-                    case "normal":
+                    case "easy":
                         initialTimeLeft = 300;
                         timeLeft = 300;
                         break;
-                    case "hard":
+                    case "medium":
                         initialTimeLeft = 150;
                         timeLeft = 150;
                         break;
-                    case "vhard":
+                    case "hard":
                         initialTimeLeft = 60;  
                         timeLeft = 60;
                         break;
