difficutly bug fixed

--- a/stats.html
+++ b/stats.html
@@ -106,9 +106,11 @@
 
                 if (difficulty = "easy") {
                     difficulty = "Tourist";
-                } else if (difficulty = "medium") {
+                }
+                if (difficulty = "medium") {
                     difficulty = "Explorer";
-                } else if (difficulty = "hard") {
+                }
+                if (difficulty = "hard") {
                     difficulty = "Jungle Warrior";
                 }
                 stats.innerHTML += "<br>Difficulty: " + difficulty;
