update time remaining

--- a/stats.html
+++ b/stats.html
@@ -102,7 +102,7 @@
                 //add stats part
                 stats = document.getElementById("stats");
                 stats.innerHTML = "Endings Found: " + endingsFound + "/" + totalEndings;
-                stats.innerHTML += "<br>Time Taken: " + formatSecondsToTimeString(timeTaken);
+                stats.innerHTML += "<br>Time Remaining: " + formatSecondsToTimeString(timeTaken);
 
                 if (difficulty = "easy") {
                     difficulty = "Tourist";
