--- a/mainGameScreen.html
+++ b/mainGameScreen.html
@@ -225,7 +225,7 @@
             justify-content: center;
             font-size: 3em;
             margin: 0px;
-            color: white;
+            color: hwb(0 100% 0%);
         }
 
         #barBackground {
@@ -263,7 +263,7 @@
                     <label for="text-size">Text Size:</label>
                     <input type="range" id="text-size" min="14" max="24" value="16">
                     <label for="text-color">Text Color:</label>
-                    <input type="color" id="text" value="#000000">
+                    <input type="color" id="text" value="#ffffff">
                     <label for="background-color">Background Color:</label>
                     <input type="color" id="background-color" value="#022c22">
                     <label for="font-select">Font:</label>
@@ -583,7 +583,7 @@
             }
             function pauseBackgroundMusic() {
             const backgroundMusic = document.getElementById('backgroundMusic');
-    backgroundMusic.pause();
+            backgroundMusic.pause();
 }
         </script>
 
