--- a/mainGameScreen.html
+++ b/mainGameScreen.html
@@ -427,20 +427,17 @@
                 // Clicking a choice button too fast caused multiple typewriter effects
                 // simultateously - hence a new sceneText element is now created
                 // every time.
-                var scene_text_name = "sceneText" + scene_number;
-                var descriptionBox = document.getElementById("descriptionBox");
-                var background_color = window.getComputedStyle(descriptionBox).getPropertyValue('background-color');
-                var text_element = "<p class=\"unselectable\" style=\"color:" + background_color + ";\" id=" + scene_text_name +"></p>";
-                document.getElementById("sceneTextLocation").innerHTML += text_element;
+
+                var scene_text_name = "sceneText" + scene_number; 
+
+                var descriptionBox = document.getElementById("descriptionBox"); 
 
                 if (Array.isArray(text)) {
                     text = await pickRandomFromList(text);
-                    
+
                 }
 
-                document.getElementById(scene_text_name).innerHTML = text;
-
-                typeWriter(scene_text_name, speed=9);
+                document.getElementById("sceneTextLocation").innerHTML = text;
             }
 
             function updatePrompts(sceneDict) {
@@ -561,11 +558,13 @@
             }
 
             async function pickRandomFromList(myList) {
+                console.log("in the API bit")
                 listLength = myList.length;//myList.length();
                 url = "http://andymcdowell.hosting.hal.davecutting.uk/1030_APIs/diceRollWithInputs.php";
                 qStr = "?diceFaceNumber=" + listLength + "&diceNumber=1"; //reducing by 1 so that it is the list index
                 APIResponse = await fetchURL(url+qStr);
                 randomPos = APIResponse[0]["result"]; //this API returns random numbers in a list so extract the value
+                console.log("random pos: " + randomPos);
                 return myList[randomPos-1];
             }
 
